fixed form overlap

--- a/app/styles/components/_henna1.scss
+++ b/app/styles/components/_henna1.scss
@@ -156,7 +156,7 @@
             margin: auto;
             width: 80%;
             border: 3px solid $light-rose;
-            height: calc(100% + 1px);
+            // height: calc(100% + 1px);
           }
         }
       }
